# rusty-family-calendar-app

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODOS.md  build-pi.sh  build.rs  config.toml.example  install-pi.sh  rusty-calendar-pi.env  rusty-calendar-pi.service
.cargo/: config.toml
agents/: icons.md  node.md  renderer.md  src.md  theme.md
assets/fonts/: README.md
backup/: main_back.rs  main_latest_layout_back.rs
src/: app.rs  components.rs  event.rs  layout.rs  main.rs  profile.rs  table.rs  theme.rs
src/calendar/: mod.rs
src/icons/: mod.rs
src/node/: builder.rs  grid_builder.rs  mod.rs  shape_builder.rs
src/renderer/: drm.rs  mod.rs  winit.rs
src/theme/: font.rs  mod.rs
