[package]
name = "rusty-calendar-pi"
version = "0.1.0"
edition = "2024"

[dependencies]
cosmic-text = "0.19.0"
once_cell = "1.21.4"
taffy = { version = "0.10.1" }
tiny-skia = "0.12.0"

[target.'cfg(not(all(target_os = "linux", target_arch = "arm", target_abi = "eabihf", any(target_env = "gnu", target_env = "musl"))))'.dependencies]
softbuffer = "0.4.8"
winit = "0.30.13"

[target.'cfg(all(target_os = "linux", target_arch = "arm", target_abi = "eabihf", any(target_env = "gnu", target_env = "musl")))'.dependencies]
drm = { version = "0.15.0", default-features = false }
