[package]
name = "rusty-calendar-pi"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1"
calcard = "0.3.6"
chrono = "0.4.45"
cosmic-text = "0.19.0"
once_cell = "1.21.4"
resvg = "0.47.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1.0.228"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
taffy = { version = "0.10.1" }
tiny-skia = "0.12.0"
toml = "0.8"
ureq = "3.3.0"
usvg = "0.47.0"
uuid = "1.23.5"

[target.'cfg(not(all(target_os = "linux", target_arch = "arm", target_abi = "eabihf", any(target_env = "gnu", target_env = "musl"))))'.dependencies]
softbuffer = "0.4.8"
winit = "0.30.13"

[target.'cfg(all(target_os = "linux", target_arch = "arm", target_abi = "eabihf", any(target_env = "gnu", target_env = "musl")))'.dependencies]
drm = { version = "0.15.0", default-features = false }
